USA Texas and California Tags UPDATE

--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -43,6 +43,28 @@
  USA:0 "America"
  USA_DEF:0 "America"
  USA_ADJ:0 "American"
+ CAL_fascism:0 "Republic of California"
+ CAL_fascism_DEF:0 "the Republic of California"
+ CAL_democratic:0 "Republic of California"
+ CAL_democratic_DEF:0 "the Republic of California"
+ CAL_neutrality:0 "Republic of California"
+ CAL_neutrality_DEF:0 "the Republic of California"
+ CAL_communism:0 "Socialist Republic of California"
+ CAL_communism_DEF:0 "the Socialist Republic of California"
+ CAL:0 "California"
+ CAL_DEF:0 "California"
+ CAL_ADJ:0 "Californian"
+ TEX_fascism:0 "Deutsche Republik Texas"
+ TEX_fascism_DEF:0 "the Deutsche Republik Texas"
+ TEX_democratic:0 "Republic of Texas"
+ TEX_democratic_DEF:0 "the Republic of Texas"
+ TEX_neutrality:0 "Independant Republic of Texas"
+ TEX_neutrality_DEF:0 "the Independant Republic of Texas"
+ TEX_communism:0 "Socialist Republic of Texas"
+ TEX_communism_DEF:0 "the Socialist Republic of Texas"
+ CAL:0 "Texas"
+ CAL_DEF:0 "Texas"
+ CAL_ADJ:0 "Texan"
  SWE_fascism:0 "Sweden"
  SWE_fascism_DEF:0 "Sweden"
  SWE_neutrality:0 "Kingdom of Sweden"
