--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -431,6 +431,14 @@
  USA_republican_party:0 "Republican Party"
  USA_fascism_party:0 "Unorganized Extremist Groups"
  USA_neutrality_party:0 "Various Third Parties"
+ CAM_communism_party:0 "Unorganized Socialist Groups"
+ CAL_democratic_party:0 "California Progressive Party"
+ CAL_fascism_party:0 "Unorganized Extremist Groups"
+ CAL_neutrality_party:0 "Prohibition Party"
+ TEX_communism_party:0 "Socialist Party of Texas"
+ TEX_democratic_party:0 "Democratic Party of Texas"
+ TEX_fascism_party:0 "Unorganized Extremist Groups"
+ TEX_neutrality_party:0 "Various Third Parties"
 
  USB_communism_party:0 "Socialist Party"
  USB_communism_party_long:0 "Socialist Party of America"
