USA American Territories Tag UPDATE

--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -62,9 +62,20 @@
  TEX_neutrality_DEF:0 "the Independant Republic of Texas"
  TEX_communism:0 "Socialist Republic of Texas"
  TEX_communism_DEF:0 "the Socialist Republic of Texas"
- CAL:0 "Texas"
- CAL_DEF:0 "Texas"
- CAL_ADJ:0 "Texan"
+ TEX:0 "Texas"
+ TEX_DEF:0 "Texas"
+ TEX_ADJ:0 "Texan"
+ UST_fascism:0 "Territories of the United States"
+ UST_fascism_DEF:0 "the Territories of the United States"
+ UST_democratic:0 "Territories of the United States"
+ UST_democratic_DEF:0 "the Territories of the United States"
+ UST_neutrality:0 "Territories of the United States"
+ UST_neutrality_DEF:0 "the Territories of the United States"
+ UST_communism:0 "Indian Reservations of the United States"
+ UST_communism_DEF:0 "the Indian Reservations of the United States"
+ UST:0 "America"
+ UST_DEF:0 "America"
+ UST_ADJ:0 "American"
  SWE_fascism:0 "Sweden"
  SWE_fascism_DEF:0 "Sweden"
  SWE_neutrality:0 "Kingdom of Sweden"
