--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -3913,6 +3913,7 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
 
  CAL_hiram_johnson:0 "Hiram Johnson"
  TEX_james_ferguson:0 "James E. Ferguson"
+ UST_american_administration:0 "American Administration"
  
  # VENEZUELA
  VEN_juan_vicente_gomez:0 "Juan Vicente Gómez"
