--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -431,6 +431,10 @@
  USA_republican_party:0 "Republican Party"
  USA_fascism_party:0 "Unorganized Extremist Groups"
  USA_neutrality_party:0 "Various Third Parties"
+ UST_communism_party:0 "Native Administration"
+ UST_democratic_party:0 "American Administration"
+ UST_fascism_party:0 "U.S Army"
+ UST_neutrality_party:0 "American Administration"
  CAM_communism_party:0 "Unorganized Socialist Groups"
  CAL_democratic_party:0 "California Progressive Party"
  CAL_fascism_party:0 "Unorganized Extremist Groups"
