--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -127,6 +127,16 @@ ww1_germanrework.23.t:0 "The Fleeting Right-Wing"
  ww1_germanrework.23.d:0 ""
  ww1_germanrework.23.a:0 "Perhaps the right can still be revived.."
 
+##1914 The Royal Approval of Frankfurt university
+ww1_germanrework.24.t:0 "The Founding of Frankfurt University"
+ ww1_germanrework.24.d:0 "The University of Frankfurt on Main was established on September 28th, 1912, when the foundation for forming the university was passed by Frankfurt's city government. It has it's roots in Goethe University, which was established in 1484, but was not officially considered to be one under German customs, as it did not issue degrees for almost half a millennia. Funded by several people and groups, notably the security dealers in the Speyer family; Wilhelm Ralph Merton, the founder of Metallgesellschaft AG; Arthur von Weinberg, co-owner of the historic Cassella chemical company, and the former director of Senckenberg Nature Research Society; and various other families and local elites.\n\nRoyal approval for Universität Frankfurt am Main was granted on June 10th, 1914, and enrollment began in mid-October."
+ ww1_germanrework.24.a:0 "The German mind will never be sullied"
+
+#1914 Albert Einstein Comes to Germany
+ww1_germanrework.25.t:0 "Einstein Comes to Germany"
+ ww1_germanrework.25.d:0 "Albert Einstein, the renowned theoretical physicist, was recently offered a job as the director of the new Kaiser Wilhelm Institute for Physics, as well as membership in the Prussian Academy of Science and the Humboldt Academy of Berlin in order to be funded to conduct research. Max Planck - a theoretical physicist who served as president of the German Physical Institute from 1905 to 1909, and creator of Planck's Constant - and Walther Nernst - friend of Kaiser Wilhelm II and thermodynamic physicist - convinced Einstein to take these jobs. He settled in Dahlem on April 1st, 1914."
+ ww1_germanrework.25.a:0 "But he's a jew?"
+
 #Decisions
 
 #Reichstag
@@ -172,37 +182,6 @@ GER_ww1_state_munitions:0 "Investing in State Munitions"
 ww1_germanytooltip1:0 "If Belgium accepts our proposal we can expect the profit to benefit our economy as a whole"
 ww1_germanytooltip2:0 "Whichever faction in the right wing is more powerful will determine the outcome of German politics after the inevitable major war in Europe. However, empowering the nationalists will be difficult and will result in an unstable empire prior to the war."
 ww1_germanytooltip3:0 "This focus will be automatically completed if a §cconservative§! chancellor comes into power"
-
-#Reichstag Tooltips
-ww1_germanypredictedseatchange:0 "Predicted Seat Change:"
-
-ww1_germanyspdincreasetooltip1:0 "     -§rSPD§! gains §Y1§!"
-ww1_germanyspdincreasetooltip2:0 "     -§rSPD§! gains §Y2§!"
-ww1_germanyspddecreasetooltip1:0 "     -§rSPD§! loses §Y1§!"
-
-ww1_germanycpdecreasetooltip1:0 "     -§gCentre Party§! loses §Y1§!"
-ww1_germanycpdecreasetooltip2:0 "     -§gCentre Party§! loses §Y2§!"
-
-ww1_germanymfrpincreasetooltip1:0 "     -§NMinor Far Right Parties§! gains §Y1§!"
-
-ww1_germanymcpincreasetooltip1:0 "     -§3Minor Conservative Parties§! gains §Y1§!"
-
-ww1_germanynlpdecreasetooltip1:0 "     -§GNLP§! loses §Y1§!"
-ww1_germanynlpdecreasetooltip2:0 "     -§GNLP§! loses §Y2§!"
-
-ww1_germanypppdecreasetooltip1:0 "     -§mPPP§! loses §Y1§!"
-
-ww1_germanymlipdecreasetooltip1:0 "     -§7Minor Liberal Parties§! loses §Y1§!"
-ww1_germanymlipdecreasetooltip2:0 "     -§7Minor Liberal Parties§! loses §Y2§!"
-
-ww1_germanymlpdecreasetooltip1:0 "     -§4Minor Local Parties§! loses §Y1§!"
-ww1_germanymlpdecreasetooltip2:0 "     -§4Minor Local Parties§! loses §Y2§!"
-
-ww1_germanygrpincreasetooltip1:0 "     -§CGRP§! gains §Y1§!"
-ww1_germanygrpincreasetooltip2:0 "     -§CGRP§! gains §Y2§!"
-
-ww1_germanygcpincreasetooltip1:0 "     -§cGCP§! gains §Y1§!"
-ww1_germanygcpincreasetooltip2:0 "     -§cGCP§! gains §Y2§!"
 
 #Dynamic Modifiers
 GER_agricultural_incentives:0 "Agricultural Incentives"
