working on egyptian uprising

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2784,6 +2784,14 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_promote_pro_independence_voices_desc:0 "A large part of the Egyptian society opposes their war against our empire. Though remaining marginalized, we'll aid these groups in order to make their voices heard more."
  EGY_ban_national_party:0 "Ban the National Party"
  EGY_ban_national_party_desc:0 "Al-Hizn al-Watani, also known as the national party, has been causing us trouble by promoting anti-war and pro-Ottoman messages. As they're both a hindrance on our war effort, and a trouble on our relations with Britain, best course of action would be to ban them."
+ TUR_start_the_egyptian_uprising:0 "Start the Egyptian Uprising"
+ TUR_start_the_egyptian_uprising_desc:0 "Many aspects of the Egyptian society support our empire and object the Egyptian war effort against the Caliph. Through alligning with Egyptian bureaucracy, clergy and low ranking conscripts; we can stage a pro-Ottoman uprising or perhaps a revolution in Egypt."
+ TUR_allign_with_the_egyptian_bureaucracy:0 "Allign with the Egyptian Bureaucracy"
+ TUR_allign_with_the_egyptian_bureaucracy_desc:0 "Many bureaucrats in Egypt have gained their privilages during the Ottoman era and thus are loyal to us. By alligning with the bureaucracy, we can sway their opinions."
+ TUR_allign_with_the_egyptian_clergy:0 "Allign with the Egyptian Clergy"
+ TUR_allign_with_the_egyptian_clergy_desc:0 "Muslim clergy and imams in the Egyptian society oppose Egyptian conflict against the legitimate Ottoman Caliphate. By alligning with the clergy, we can use religion to influence the common people"
+ TUR_allign_with_the_egyptian_conscripts:0 "Allign with the Egyptian Conscripts"
+ TUR_allign_with_the_egyptian_conscripts_desc:0 "Many low ranking conscripts within the Egyptian armed forces oppose Egyptian war against our empire. By alligning with the Egyptian conscripts, we can sabotage the Egyptian war effort."
 
  TUR_decision_cost_minority:0 "[TUR.turkeyminoritycost]"
  TUR_decision_cost_minority_blocked:0 "[TUR.turkeyminoritycostblocked]"
