--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4497,8 +4497,21 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman_syria.10.d:0 "Al-Hizb al-Watani, also known as the National Party, is a nationalist pro-independence party. The party firmly opposes our allignment with the Western powers. Ottomans, already involved with out internal matters, use this to their opportunity by supporting to party to damage our war effort."
  ottoman_syria.10.a:0 "This party needs to be outlawed."
  ottoman_syria.11.t:0 "Pro-Independence Voices Grow"
- ottoman_syria.11.d:0 "Our war with the Ottomans has failed to gain the traction from a large part of our society. Pro-independence and pan-islamist voices have been opposing our war against the Ottomans. As Ottomans support and aid these groups, they make their voices heard a little louder than they otherwise would."
+ ottoman_syria.11.d:0 "Our war with the Ottomans has failed to gain the traction from a large part of our society. Pro-independence and Pan-Islamist voices have been opposing our war against the Ottomans. As Ottomans support and aid these groups, they make their voices heard a little louder than they otherwise would."
  ottoman_syria.11.a:0 "Pro-independence? More like pro-Ottoman."
+ ottoman_syria.12.t:0 "Ottoman Sponsored Bureaucratic Opposition"
+ ottoman_syria.12.d:0 "Support for the Ottomans in our state has always been high. As many bureaucrats in our nation has gained their privilages and positions during the Ottoman rule, they remain loyal to them. As expected, Ottomans take advantage of this situation."
+ ottoman_syria.12.a:0 "Bureaucracy against its own state."
+ ottoman_syria.13.t:0 "Ottoman Sponsored Clergy Opposition"
+ ottoman_syria.13.d:0 "Support for the Ottomans in our state has always been high. As many clergyman still see Ottoman Caliph as the legitimate representor of Islam, many imams denounce the war effort against the Ottomans. As expected, Ottomans take advantage of this situation."
+ ottoman_syria.13.a:0 "Don't they fear Allah?"
+ ottoman_syria.14.t:0 "Ottoman Sponsored Conscript Opposition"
+ ottoman_syria.14.d:0 "Support for the Ottomans in our state has always been high. As our current war against the Ottomans is seen as a foreign imperialist war against our interest, many men within our military ranks oppose this conflict. As expected, Ottomans take advantage of this situation."
+ ottoman_syria.14.a:0 "They're turning our men against us."
+ ottoman_syria.15.t:0 "The Egyptian Uprising"
+ ottoman_syria.15.d:0 "Though we've gained independence from the Ottomans and the Turkish yoke, our population has remained loyal to the Caliph and the idea of Pan-Islamisim. The bureaucracy in the country hsa rose to their positions during the Ottoman era. Clergy stood loyal to the authority of the Caliph. Our common soldiers recruite dfrom the population had no reason to fight the last great Islamic nation. As Ottomans built their support through these three main groups in our nation, they've finaly commenced an uprising to hinder or possibly totally annihilate our war effort."
+ ottoman_syria.15.a:0 "The war was indeed unpopular..."
+ ottoman_syria.15.tt:0 "§REffects of the uprising will become apparent once it starts and would be instrumentalized by the support we've built.§!"
 
  ottoman..120.t:0 "Sects Mobilize"
  ottoman..120.d:0 "With the start of the war, conservative sects supporting our regime has started to send volunteer forces in an effort to aid us in our war effort."
