--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5063,6 +5063,7 @@
  TUR_popular_egyptian_resistance_tt:0 "Unlocks operations to boost opposition in Egypt.\n§R(Requires having built an Intelligence Agency)§!."
  TRS_increase_egyptian_opposition:0 "Boost Egyptian Opposition"
  TRS_increase_egyptian_opposition_desc:0 "Egyptian population and aristocracy for the most part still stands loyal to the Ottoman Caliph and Pan-Islamist ideals. As we're embroiled in a war with them, we can stir up the Egyptian opposition to sabotage the war effort of our enemies."
+ TUR_instigate_egyptian_rebellion_tt:0 "Unlocks operations to start revolution in Egypt.\n§R(Requires having built an Intelligence Agency)§!."
 
  FRA_ww1_dreyfus_exoneration:0 "Dreyfus Exoneration Aftermath"
  FRA_ww1_dreyfus_exoneration_desc:0 "Exempt since 1906, Alfred Dreyfus is still at the heart of the political debate. It is time to close this painful parenthesis of the 3rd Republic."
