--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1077,6 +1077,17 @@
  TRS_national_party_opposition_desc:0 "Al-Hizn al-Watani, also known as the national party, is an anti-British pro-independence political party. To achieve their goal, they're suspected to be working with the Ottoman government."
  TRS_pro_independence_voices:0 "Pro-Independence Voices"
  TRS_pro_independence_voices_desc:0 "As the Ottomans support various pro-independence and pro-Ottoman voices, this spreads through our society to pressure our government on our war against the Ottomans."
+ TRS_bureaucratic_opposition:0 "Bureaucratic Opposition"
+ TRS_bureaucratic_opposition_desc:0 "Our current war against the Ottomans is being opposed by the bureaucracy. As a result, their uncooperative status causes us hardships with administration."
+ TRS_clergy_opposition:0 "Clergy Opposition"
+ TRS_clergy_opposition_desc:0 "Our current war against the Ottomans is being denounced by the clergy. This results in the common religious population being dissatisfied with our policies."
+ TRS_conscript_opposition:0 "Conscript Opposition"
+ TRS_conscript_opposition_desc:0 "Our current war against the Ottomans is highly unpopular amnog our common conscripts. This results in desertions and hardship with conscription."
+ TRS_egyptian_uprising:0 "Egyptian Uprising"
+ TRS_egyptian_uprising_desc:0 "Sponsored by the Ottomans, our built up opposition finally resulted in a revolution to overthrow the government and withdraw our nation from this imperialist foreign war against our fellow Muslims and the Caliph."
+ TRS_popular_opposition:0 "Popular Opposition"
+ TRS_popular_opposition_desc:0 "The Ottoman support in our country has come to a point that a large part of our society is objecting the decisions of our government. As their loyalties lay closer to that of the Ottoman Caliph than our own nation, it causes a great bit of deal to our country."
+ TRS_popular_opposition_instant_desc:0 "§RWill be removed if we're no longer at war with [TUR.GetName]§!"
 
  TUR_ottoman_industrial_investment:0 "Ottoman Industrial Investment"
  TUR_ottoman_military_mission:0 "Ottoman Military Mission"
