--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4957,6 +4957,8 @@ USA_register_lobbyists:0 "Register Lobbyists"
  AUH_F48P_victory:0 "F48P Victory"
 USA_enforce_party_whip:0 "Intensify Use of Party Whip"
 USA_enforce_whip:0 "Enforce the Whip"
+USA_anti_corruption_act:0 "The Hardwick Anti Corruption Act"
+USA_the_final_nail_in_the_coffin:0 "The Final Nail in the Coffin"
 USA_olive_branch_to_progressives:0 "Extend an Olive Branch to Progressives"
 modify_dem_unity10:0 "Modify §1Democratic Unity§! by: §G+5§!"
 modify_dem_unity5:0 "Modify §1Democratic Unity§! by: §G+5§!"
@@ -4964,6 +4966,9 @@ modify_dem_unityminus5:0 "Modify §1Democratic Unity§! by: §R-5§!"
 modify_dem_unityminus10:0 "Modify §1Democratic Unity§! by: §R-10§!"
 on_select_iuc:0 "When this focus is selected:\nGets event '§YDepartment of Justice Announces Investigation of Several Union§!'\nThis event chain will reveal rampant corruption amongst unions. This will reduce the effects of the §Y'Corrupt Political System'§! national spirit, and could be a §Rdeadly blow to union support§!"
 department_pf_labor:0 "Department of Labour"
+USA_tighten_the_leash:0 "Tighten the Leash"
+USA_a_job_well_done:0 "A Job Well Done!"
+USA_lodge_mckellar_security_act:0 "Lodge Mckeller Anti Strike Act"
 USA_economic_liberalization:0 "Economic Liberalization"
 USA_postal_banking:0 "Cement the Postal Banking System"
 USA_kick_the_rotten_structure:0 "Dismantle the Corrupted Unions"
