RAJ Foreign and Political Departments Done + Political Tree Tweaks UPDATE

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8703,6 +8703,11 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  RAJ_repel_factory_act_desc:0 "While the Indian Factories Act was needed to improve labour conditions and thus gain public support, it now stands against our production quotas."
  RAJ_you_can_repel.tt:0 "\nTaking the focus §YMobilize the Raj§! will prevent §Rdiscontent§! from this decision\n"
  RAJ_expand_raj_usa_cooperation:0 "Expand USA-Raj Cooperation"
+ RAJ_simla_convention:0 "Simla Convention"
+ RAJ_simla_convention_desc:0 "With the recent independence of Tibet from China and London's meddling in its affairs, it is only natural that our administration sends a delegation to meet with the Tibetans and Chinese to discuss Tibet's position on the world stage, especially its geographical frontiers and relations with China."
+ RAJ_denounce_south_africa:0 "Denounce South-Africa"
+ RAJ_denounce_south_africa_desc:0 "Charles Hardinge has on several occasions expressed his disapproval of South Africa's anti-Indian laws, and it is time that our administration officially condemns the South African government to put its words into action."
+ has_denounced_south_africa:0 "Has denounced South-Africa"
  RAJ_bloated_legal_apparatus_remove:0 "Completing this decision is §Rnecessary§! to remove the ''§YBloated Legal Apparatus§!'' National Spirit.\n"
  RAJ_delineate_executive_legislative_power:0 "Delineate Executive/Legislative Powers"
  RAJ_delineate_executive_legislative_power_desc:0 "It is necessary to delineate the powers and functions of the executive and legislative bodies in India. Reaffirming comprehensibly the significant executive powers of the Viceroy and the primarily advisory nature of the Legislative Councils."
