--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10681,15 +10681,19 @@ RAJ_defence_of_india_act_reward:0 "§RFailure to complete this focus two years i
 RAJ_ingress_into_india_ordinance:0 "Ingress into India Ordinance"
 RAJ_ingress_into_india_ordinance_desc:0 ""
 RAJ_ingress_into_india_ordinance_reward:0 "Completing this focus will §Ygreatly§! diminish the forces of any potential §RIndian rebellion§!.\n\nCompleting this focus will §Ygreatly§! diminish the cost of the £GFX_decision_icon_small §YSupress Nationalist Newspaper§! and £GFX_decision_icon_small §YSupress Socialist Groups§! decisions.\n\n"
-RAJ_rowlatt_committee:0 "Rowlatt Committee"
+RAJ_rowlatt_committee:0 "Sedition Committee"
 RAJ_rowlatt_committee_desc:0 ""
+RAJ_rowlatt_committee_reward:0 "We will establish the §YSedition Committee§!, chaired by Sir §YSidney Rowlatt§!, to assess the threat to British rule posed by §Rrevolutionary movements§! and to determine the legal changes necessary to deal with them. Several £GFX_decision_icon_small §YDecisions§! will then be unlocked in order to strengthen the committee and obtain information on our foes.\n\nCompleting the decision §YExpand USA-Raj Cooperation§! (Unlocked by the §YDefence of India Act§! focus), and obtaining the approval of the USA, will enable several £GFX_decision_icon_small §YDecisions§! to deepen cooperation between the USA and the Raj.\n\n"
 RAJ_rowlatt_act:0 "Rowlatt Act"
 RAJ_rowlatt_act_desc:0 ""
-RAJ_foreign_and_political_department:0 "Foreign and Political Department"
+RAJ_foreign_and_political_department:0 "Foreign and Political Departments"
 RAJ_foreign_and_political_department_desc:0 ""
+RAJ_foreign_and_political_department_reward:0 "\nCompleting this focus will unlock the §YMilitary§! side of the National focus tree.\n\n"
+RAJ_foreign_and_political_department_reward2:0 "\nCompleting both this focus and the §YSurvey of India§! focus will unlock the £GFX_decision_icon_small §YSimla Convention§! decision."
 RAJ_survey_of_india:0 "Survey of India"
 RAJ_survey_of_india_desc:0 ""
-RAJ_survey_of_india_reward:0 "\nCompleting this focus will unlock several §Yexcavation§! and §Ydefence§! focuses on the §YIndustrial§! side of the National focus tree.\n\nCompleting this focus will unlock several £GFX_decision_icon_small §YDecision§! which will allow us to commission the Survey of India to improve the §YIndian Army§! should we fight on the §Rhome front§!."
+RAJ_survey_of_india_reward:0 "\nCompleting this focus will unlock several §YExcavation§! and §YDefence§! focuses on the §YIndustrial§! side of the National focus tree.\n\nCompleting this focus will unlock several £GFX_decision_icon_small §YDecisions§! which will allow us to commission the Survey of India to improve the §YIndian Army§! should we fight on the §Rhome front§!."
+RAJ_survey_of_india_reward2:0 "\nCompleting both this focus and the §YForeign and Political Departments§! focus will unlock the £GFX_decision_icon_small §YSimla Convention§! decision."
 RAJ_hardinge_ascension:0 "Lord Hardinge Ascendency"
 RAJ_hardinge_ascension_desc:0 ""
 RAJ_indian_diplomacy:0 "Indian Diplomacy"
@@ -10697,10 +10701,7 @@ RAJ_indian_diplomacy_desc:0 ""
 
 RAJ_status_of_the_capital:0 "Status of the Capital"
 RAJ_status_of_the_capital_desc:0 "Calcutta has been the capital of the British Raj since its inception in 1858 following the Sepoy Rebellion, and has served us well ever since. However, Calcutta has its fair share of sanitary issues and calls for a change of capital have grown louder overtime. The question being: where should our administration go?"
-RAJ_simla_convention:0 "Simla Convention"
-RAJ_simla_convention_desc:0 "With the recent independence of Tibet from China and London's meddling in its affairs, it is only natural that our administration sends a delegation to meet with the Tibetans and Chinese to discuss Tibet's position on the world stage, especially its geographical frontiers and relations with China."
-RAJ_denounce_south_africa:0 "Denounce South-Africa"
-RAJ_denounce_south_africa_desc:0 "Charles Hardinge has on several occasions expressed his disapproval of South Africa's anti-Indian laws, and it is time that our administration officially condemns the South African government to put its words into action."
+
 RAJ_the_question_of_natal:0 "The Question of Natal"
 RAJ_the_question_of_natal_desc:0 ""
 
