--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4512,6 +4512,26 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman_syria.15.d:0 "Though we've gained independence from the Ottomans and the Turkish yoke, our population has remained loyal to the Caliph and the idea of Pan-Islamisim. The bureaucracy in the country hsa rose to their positions during the Ottoman era. Clergy stood loyal to the authority of the Caliph. Our common soldiers recruite dfrom the population had no reason to fight the last great Islamic nation. As Ottomans built their support through these three main groups in our nation, they've finaly commenced an uprising to hinder or possibly totally annihilate our war effort."
  ottoman_syria.15.a:0 "The war was indeed unpopular..."
  ottoman_syria.15.tt:0 "§REffects of the uprising will become apparent once it starts and would be instrumentalized by the support we've built.§!"
+ ottoman_syria.16.t:0 "Egyptian Revolution"
+ ottoman_syria.16.d:0 "As the Ottoman sponsored National Party took over the country with a coup, Egypt has announced that they're dropping out of the war. Though every aspect of the population has showed their reaction with the recent coup, Egypt is too strategic of a reason to just let go off."
+ ottoman_syria.16.a:0 "They can't go off that easily."
+ ottoman_syria.17.t:0 "Egyptian Revolution"
+ ottoman_syria.17.d:0 "As the Ottoman sponsored National Party took over the country with a coup, Egypt has announced that they're dropping out of the war. As a result, they asked to sign a peace deal with our government."
+ ottoman_syria.17.a:0 "This they drop out of the war."
+ ottoman_syria.18.t:0 "Egyptian Civil War"
+ ottoman_syria.18.d:0 "Ever since the British occupation in 1882, Egypt has been under British jurisdiction even though it was formarly recognized as an Ottoman subject. Though Egypt has fought a war with the Ottomans before its occupation at the hands of the British, a large part of the society still supported Ottoman authority and the legitimacy of the Caliph. Yet these have all boiled down to an eventual war against the Ottomans and a proceeding civil war.\nThrough cooperation with different parts of the society, Ottomans have managed to stir up the population to start a civil war against the current regime. Whether the revolt succeeds or not, this will surely distract the current regime and its allies and force them to divert their forces."
+ ottoman_syria.18.a:0 "Our subject is falling apart."
+ ottoman_syria.18.b:0 "Traitors to the nation, sympathizers to our enemies."
+ ottoman_syria.18.c:0 "Power of the Ottoman Caliph."
+ ottoman_syria.18.e:0 "No to the imperialist war!"
+ ottoman_syria.18.f:0 "War is tearing Egypt apart."
+ ottoman_syria.19.t:0 "Egyptian Revolution"
+ ottoman_syria.19.d:0 "Ever since the British occupation in 1882, Egypt has been under British jurisdiction even though it was formarly recognized as an Ottoman subject. Though Egypt has fought a war with the Ottomans before its occupation at the hands of the British, a large part of the society still supported Ottoman authority and the legitimacy of the Caliph. Yet these have all boiled down to an eventual war against the Ottomans and a proceeding coup d'état.\nThrough cooperation with different parts of the society, Ottomans have managed to stir up the population to formulate a coup against the current regime. Whether the revolt succeeds or not, this will surely distract the allies of the old regime to take action, forcing them to divert their forces."
+ ottoman_syria.19.a:0 "A new course for Egypt."
+ ottoman_syria.19.b:0 "They can't break free that easily."
+ ottoman_syria.19.c:0 "Another more enemy falls."
+ ottoman_syria.19.e:0 "People of Egypt have proven their loyalty to the Caliph."
+ ottoman_syria.19.f:0 "What lies ahead for Egypt?"
 
  ottoman..120.t:0 "Sects Mobilize"
  ottoman..120.d:0 "With the start of the war, conservative sects supporting our regime has started to send volunteer forces in an effort to aid us in our war effort."
