--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1088,6 +1088,8 @@
  TRS_popular_opposition:0 "Popular Opposition"
  TRS_popular_opposition_desc:0 "The Ottoman support in our country has come to a point that a large part of our society is objecting the decisions of our government. As their loyalties lay closer to that of the Ottoman Caliph than our own nation, it causes a great bit of deal to our country."
  TRS_popular_opposition_instant_desc:0 "§RWill be removed if we're no longer at war with [TUR.GetName]§!"
+ TRS_reconfiguring_foreign_policy:0 "Reconfiguring Foreign Policy"
+ TRS_reconfiguring_foreign_policy_desc:0 "Our recent coup, alongside our internal politics, has left our diplomatic relations in disarray. While dropping out of the war resulted in a base support from our population, it also left us unable to maneuver through the international arena."
 
  TUR_ottoman_industrial_investment:0 "Ottoman Industrial Investment"
  TUR_ottoman_military_mission:0 "Ottoman Military Mission"
