indian diplomacy decision

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8779,6 +8779,17 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  RAJ_expand_military_industry:0 "Expand Military Industry"
  RAJ_expand_military_industry_desc:0 "We must urge the Ordnance Factory Board to build new arsenals in preparation for the upcoming conflict."
 
+ RAJ_indian_diplomacy_category:0 "Indian diplomacy"
+ this_soldier_is_defending_india:0 "This Soldier is Defending India"
+ sons_of_the_empire:0 "Sons of the Empire"
+ our_indian_warriors:0 "Our Indian Warriors"
+ following_in_the_footsteps_of_dod:0 "Following in the Footsteps of the Dear Old Dad"
+ outwhiskered:0 "Outwhiskered!"
+ for_india_and_for_empire:0 "For India and for Empire"
+ our_dusky_allies:0 "Our Dusky Allies"
+ who_got_money_gun_uniform:0 "Who got that Money, Gun and Uniform?"
+ invest_in_victory:0 "Invest in Victory"
+
  organized_pacifism_category:0 "Organised Pacifism"
  organise_a_peaceful_protest_in_delhi:0 "Organise a Peaceful Protest in Delhi"
  organise_a_peaceful_protest_in_east_bengal:0 "Organise a Peaceful Protest in East Bengal"
