--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2304,7 +2304,12 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_dismiss_yakub_cemil_desc:0 "[ROOT.TUR_yakub_cemil.GetName] has overstayed his welcome. It's time for him to be refrained from state affairs."
  TUR_dismiss_yakub_cemil_tt:0 "Modify §YCommittee of Union and Progress§! by\n£garrison_texticon  Required Garrisons: §R+5%§!\n£operatives_root_out_resistance_texticon  Root Out Resistance mission effects: §R-5%§!\n£attack_militia_texticon  Militia Attack: §R-2.50%§!\n£defence_militia_texticon  Militia Defense: §R-2.50%§!\n\n"
 
- debt_less_than_0:0 "£consumer_goods_texticon  Consumer Goods Factories factor value on §YOttoman Public Debt Administration§! is more than §Y0.0%§!\n" #Our debt is more than §Y0 Thousand Liras§!.
+ TUR_get_opda_name:0 "[TUR_get_opda_name]"
+ TUR_get_opda_name_opda:0 "Ottoman Public Debt Administration"
+ TUR_get_opda_name_opd:0 "Ottoman Public Debt"
+ debt_less_than_0:0 "£consumer_goods_texticon  Consumer Goods Factories factor value on §Y[TUR_get_opda_name]§! is more than §Y0.0%§!\n"
+ debt_less_than_75:0 "£consumer_goods_texticon  Consumer Goods Factories factor value on §Y[TUR_get_opda_name]§! is more than §Y75.0%§!\n"
+ debt_less_than_45:0 "£consumer_goods_texticon  Consumer Goods Factories factor value on §Y[TUR_get_opda_name]§! is more than §Y45.0%§!\n"
  TUR_dissolve_the_debt_council:0 "Dissolve the Debt Council"
  TUR_declare_moratorium:0 "Declare Moratorium"
  TUR_declare_moratorium_desc:0 "Our debt has become more than what we're able to pay. By declaring a moratorium, we'll be able to reduce the effects of our current debt. Yet this decision of ours in the long run will strain our economy."
