--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4655,6 +4655,7 @@
  TUR_increase_customs_taxes_tt4:0 "Consumer Goods Factories factor: [?THIS.TUR_increase_customs_taxes_var2|.1%Y]\n"
  TUR_ottoman_public_debt_administration:0 "Ottoman Public Debt Administration"
  TUR_ottoman_public_debt_administration_desc:0 "As our empire's debts were accimulated due to foreign reliance, Europeans established Ottoman Public Debt Administration in 1881 with the intention of collecting Ottoman taxes with an autonomous body. As this body hinders our national sovereignty, we should continue paying our debts to the administration as soon as possible."
+ TUR_OPDA_trigger_tooltip:0 "One of the following must be true:\n   Has indutrial concern §YOttoman Public Debt Administration§!\n   Has national spirit §YOttoman Public Debt§!"
  TUR_construct_hindiya_barrage:0 "Construct Hindiya Barrage"
  TUR_construct_hindiya_barrage_desc:0 "The Euphrates river gives us opportunities to construct renewable energy stations to use it to our advantage. Hindiya Barrage, a barrage that was proposed to be constructed in Euphrates, will help us with producing electricity."
  TUR_construct_hindiya_barrage_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£construction_speed_texticon  Local Construction Speed: §G+3%§!\n\n"
@@ -4692,6 +4693,7 @@
  TUR_search_for_investments_tt:0 "Will unlock decisions to invest in §Y[TUR.GetNameWithFlag]§!. These investments will result in increased §YConsumer Goods Factories factor§! for the §YOttomans§!, while a reduction of it for us."
  TUR_negotiations_with_france:0 "Negotiations with France"
  TUR_negotiations_with_france_desc:0 "Though our relations are sort of shaky with the French right now, they've been our historical allies. We must improve our relations with them to assure our survival."
+ TUR_diplomatic_relations:0 "Diplomatic Relations"
  TUR_british_naval_mission:0 "British Naval Mission"
  TUR_british_naval_mission_desc:0 "The British are the masters of the seas, without even a doubt everyone can see this. We must do a naval mission to catch them."
  TUR_british_naval_mission_tt:0 "Modify §YDonanma-yı Humâyûn§! by\n£experience_neutral_texticon  Ship Experience Gain: §G+5.0%§!\n\n"
