--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4616,11 +4616,11 @@
  TUR_law_on_churches_tt3:0 "Modify £ww1_game_rule_flag_YUG §YSouth Slavic Minority§! by\n£compliance_gain_texticon  Compliance Growth Speed: §G+15%§!\n\n"
  TUR_ottoman_law_on_church:0 "Ottoman Law on Church"
  TUR_ottoman_law_on_church_2:0 "Ottoman Law on Church"
- TUR_law_on_churches_tt4:0 "Unlocks £decision_icon_small  §YEstablish Order in Macedonia§! Decisions\nUnlocks §YIntegrate Macedonia§! Decisions\n"
+ TUR_law_on_churches_tt4:0 "Unlocks £decision_icon_small  §YEstablish Order in Macedonia§! Decisions.\nUnlocks £decision_icon_small  §YIntegrate Macedonia§! Decisions.\n"
  TUR_increase_taxes_on_albanians:0 "Increase Taxes on Albanians"
  TUR_increase_taxes_on_albanians_desc:0 "Albanians have long been an exception to our taxation policies due to their religion. Yet under the new centralization policies of our empire, no reigious category shall be an exception to taxation. Though it'll be unpopular among Albanians, and strengthen their resistance, centralization is needed for the future of our empire."
  TUR_increase_taxes_on_albanians_tt:0 "Modify §Y£ww1_flag_ALB  Albanian Minority§! by\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n\n"
- TUR_increase_taxes_on_albanians_tt2:0 "Unlocks £decision_icon_small  §YTax Collection in Albania§! Decisions"
+ TUR_increase_taxes_on_albanians_tt2:0 "Unlocks £decision_icon_small  §YTax Collection in Albania§! Decisions."
  TUR_approve_grece_memorandum:0 "Approve Greçë Memorandum"
  TUR_approve_grece_memorandum_desc:0 "Twelve requests jointly written by Albanian representatives, Greçë Memorandum is a memorandum including several demands for the establishment of an autonomous Albanian province in the empire. Though our previous governments have tries to minimize its significance, Perhaps it's best to comply with the Demands and give Autonomy to Albanians."
  TUR_approve_grece_memorandum_tt:0 "Modify §Y£ww1_flag_ALB  Albanian Minority§! by\n£political_violence_texticon  Resistance Target: §G-30%§!\n\n"
@@ -4628,7 +4628,7 @@
  TUR_centralize_albania:0 "Centralize Albania"
  TUR_centralize_albania_desc:0 "Recent rebellions in Albania back to back has became a large topic on its own. Though many in our government been proposing to give Albanians their own autonomous vilayet due to the rebellions that took the level of a crisis, most in our government oppose this. Centralization of Albania is necessary if we are to continue our hold in those lands."
  TUR_centralize_albania_tt:0 "Modify §Y£ww1_flag_ALB  Albanian Minority§! by\n£political_violence_gain_texticon  Resistance Growth Speed: §G-10%§!\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n\n"
- TUR_centralize_albania_tt2:0 "Unlocks £decision_icon_small  §YIncreased Albanian Conscriptions§! Decisions\nUnlocks £decision_icon_small  §YImprove Albanian Garrisons§! Decisions\n"
+ TUR_centralize_albania_tt2:0 "Unlocks £decision_icon_small  §YIncreased Albanian Conscriptions§! Decisions.\nUnlocks £decision_icon_small  §YImprove Albanian Garrisons§! Decisions.\n"
  TUR_albanian_vilayet:0 "Albanian Vilayet"
  TUR_albanian_vilayet_desc:0 "Recent rebellions in Albania has proven that we need to introduce serious reforms in the region. As some within our government proposes, we should give autonomy to Albanians. With the creation of an Albanian vilayet, where Albanian language, cultures and customs will be permitted, we can bring an end to these long lasting revolts that has been plaguing the region."
  TUR_albanian_vilayet_tt1:0 "Replace §Y£ww1_flag_ALB  Albanian Minority§! with £ww1_game_rule_flag_YUG §YSouth Slavic Minority§!\nEffective change:\n£manpower_texticon  Recruitable Population: §G+20.00%§!\n£political_violence_texticon  Resistance Target: §G-§![?847.TUR_ottoman_resistance_target|0%+]\n£political_violence_gain_texticon  Resistance Growth Speed: §G-§![?847.TUR_ottoman_resistance_growth|0%+]\nModify the state's modification to §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §G+0.60%§!\n£war_support_modifiericons_texticon  War Support: §G+0.30%§!\n\n"
@@ -4690,7 +4690,7 @@
  TUR_our_place_in_the_world_tt:0 "Modify §YDiplomatic Isolation§! by\n£war_support_modifiericons_texticon  War Support: §R-5.00%§!\n£improve_relations_cost_texticon  Improve relations maintain cost:§G-10%§!\n£trigger_yes Can receive volunteer forces"
  TUR_search_for_investments:0 "Search for Investments"
  TUR_search_for_investments_desc:0 "Our economy is dependent on foreign investment. The construction of railways, geodetic exploration and the construction of oil rigs are not complete without the participation of the Britts, Germans, Frenchs and Italians."
- TUR_search_for_investments_tt:0 "Will unlock decisions to invest in §Y[TUR.GetNameWithFlag]§!. These investments will result in increased §YConsumer Goods Factories factor§! for the §YOttomans§!, while a reduction of it for us."
+ TUR_search_for_investments_tt:0 "These investments will result in increased §YConsumer Goods Factories factor§! for the §YOttomans§!, while a reduction of it for us."
  TUR_negotiations_with_france:0 "Negotiations with France"
  TUR_negotiations_with_france_desc:0 "Though our relations are sort of shaky with the French right now, they've been our historical allies. We must improve our relations with them to assure our survival."
  TUR_diplomatic_relations:0 "Diplomatic Relations"
