ottoman investment tooltip fix

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4461,6 +4461,15 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman.126.t:0 "Unintended Consequences"
  ottoman.126.d:0 "Due to the recent attempt to hinder their influence, Christians started to lose their economical hegemony over the region. This resulted in the weakening of centuries old trade infrastructures and markets, and even caused unemployment."
  ottoman.126.a:0 "So far with national economy."
+ ottoman.127.t:0 "Ottomans Refuse our Investment Request"
+ ottoman.127.d:0 "As we've made our decision to invest in [TUR.GetNameDef], the [TUR.GetAdjective] government has rejected our request to invest in them. Stating that they won't be accepting any investments for some time, our investment portfolia has been returned."
+ ottoman.127.a:0 "We might try our chance later."
+ ottoman.128.t:0 "Ottomans Deny Investment Request in Specific Region"
+ ottoman.128.d:0 "As we've made our decision to invest in [TUR.GetNameDef], the [TUR.GetAdjective] government has rejected our request to invest in them. Stating that the specific region we chose to invest does not fit their interests, our investment portfolia has been returned."
+ ottoman.128.a:0 "Perhaps another region would be more fit."
+ ottoman.129.t:0 "Ottomans will not Take Further Investment Requests"
+ ottoman.129.d:0 "As we've made our decision to invest in [TUR.GetNameDef], the [TUR.GetAdjective] government has rejected our request to invest in them. Stating that they won't be accepting any investments from our nation any longer, our investment portfolia has been returned."
+ ottoman.129.a:0 "We'll keep our money to ourselves."
 
  ottoman_syria.1.t:0 "Küçük Cemal to Syria"
  ottoman_syria.1.d:0 "As the 4th army is being organized in Syria, governor responsible of the Syrian provinces [TRS.GetLeader] has requested the appointment of Mehmed Cemal Paşa. In order to provide a greater military presence in the region, Küçük Cemal Paşa will be appointed to Syria."
