--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -1903,18 +1903,48 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_remove_debt_16:0 "Modify §YOttoman Public Debt Administration§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y-16.0%§!\n"
  TUR_remove_debt_17:0 "Modify §YOttoman Public Debt Administration§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y-17.0%§!\n"
  TUR_remove_debt_18:0 "Modify §YOttoman Public Debt Administration§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y-18.0%§!\n"
- TUR_remove_debt_18:0 "Modify §YOttoman Public Debt Administration§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y-19.0%§!\n"
- TUR_remove_debt_18:0 "Modify §YOttoman Public Debt Administration§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y-20.0%§!\n"
- TUR_remove_debt_18:0 "Modify §YOttoman Public Debt Administration§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y-21.0%§!\n"
- TUR_remove_debt_18:0 "Modify §YOttoman Public Debt Administration§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y-22.0%§!\n"
- TUR_remove_debt_18:0 "Modify §YOttoman Public Debt Administration§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y-23.0%§!\n"
- TUR_remove_debt_18:0 "Modify §YOttoman Public Debt Administration§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y-24.0%§!\n"
+ TUR_remove_debt_19:0 "Modify §YOttoman Public Debt Administration§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y-19.0%§!\n"
+ TUR_remove_debt_20:0 "Modify §YOttoman Public Debt Administration§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y-20.0%§!\n"
+ TUR_remove_debt_21:0 "Modify §YOttoman Public Debt Administration§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y-21.0%§!\n"
+ TUR_remove_debt_22:0 "Modify §YOttoman Public Debt Administration§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y-22.0%§!\n"
+ TUR_remove_debt_23:0 "Modify §YOttoman Public Debt Administration§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y-23.0%§!\n"
+ TUR_remove_debt_24:0 "Modify §YOttoman Public Debt Administration§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y-24.0%§!\n"
  TUR_remove_debt_25:0 "Modify §YOttoman Public Debt Administration§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y-25.0%§!\n"
  TUR_remove_debt_26:0 "Modify §YOttoman Public Debt Administration§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y-26.0%§!\n"
  TUR_remove_debt_27:0 "Modify §YOttoman Public Debt Administration§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y-27.0%§!\n"
  TUR_remove_debt_30:0 "Modify §YOttoman Public Debt Administration§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y-30.0%§!\n"
  TUR_remove_debt_60:0 "Modify §YOttoman Public Debt Administration§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y-60.0%§!\n"
- TUR_remove_debt_80:0 "Modify §YOttoman Public Debt Administration§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y-85.0%§!\n"
+ TUR_remove_debt_85:0 "Modify §YOttoman Public Debt Administration§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y-85.0%§!\n"
+ TUR_remove_debt_1_other:0 "£consumer_goods_texticon  Consumer Goods Factories factor: §Y-1.0%§!\n"
+ TUR_remove_debt_2_other:0 "£consumer_goods_texticon  Consumer Goods Factories factor: §Y-2.0%§!\n"
+ TUR_remove_debt_3_other:0 "£consumer_goods_texticon  Consumer Goods Factories factor: §Y-3.0%§!\n"
+ TUR_remove_debt_4_other:0 "£consumer_goods_texticon  Consumer Goods Factories factor: §Y-4.0%§!\n"
+ TUR_remove_debt_5_other:0 "£consumer_goods_texticon  Consumer Goods Factories factor: §Y-5.0%§!\n"
+ TUR_remove_debt_6_other:0 "£consumer_goods_texticon  Consumer Goods Factories factor: §Y-6.0%§!\n"
+ TUR_remove_debt_7_other:0 "£consumer_goods_texticon  Consumer Goods Factories factor: §Y-7.0%§!\n"
+ TUR_remove_debt_8_other:0 "£consumer_goods_texticon  Consumer Goods Factories factor: §Y-8.0%§!\n"
+ TUR_remove_debt_9_other:0 "£consumer_goods_texticon  Consumer Goods Factories factor: §Y-9.0%§!\n"
+ TUR_remove_debt_10_other:0 "£consumer_goods_texticon  Consumer Goods Factories factor: §Y-10.0%§!\n"
+ TUR_remove_debt_11_other:0 "£consumer_goods_texticon  Consumer Goods Factories factor: §Y-11.0%§!\n"
+ TUR_remove_debt_12_other:0 "£consumer_goods_texticon  Consumer Goods Factories factor: §Y-12.0%§!\n"
+ TUR_remove_debt_13_other:0 "£consumer_goods_texticon  Consumer Goods Factories factor: §Y-13.0%§!\n"
+ TUR_remove_debt_14_other:0 "£consumer_goods_texticon  Consumer Goods Factories factor: §Y-14.0%§!\n"
+ TUR_remove_debt_15_other:0 "£consumer_goods_texticon  Consumer Goods Factories factor: §Y-15.0%§!\n"
+ TUR_remove_debt_16_other:0 "£consumer_goods_texticon  Consumer Goods Factories factor: §Y-16.0%§!\n"
+ TUR_remove_debt_17_other:0 "£consumer_goods_texticon  Consumer Goods Factories factor: §Y-17.0%§!\n"
+ TUR_remove_debt_18_other:0 "£consumer_goods_texticon  Consumer Goods Factories factor: §Y-18.0%§!\n"
+ TUR_remove_debt_19_other:0 "£consumer_goods_texticon  Consumer Goods Factories factor: §Y-19.0%§!\n"
+ TUR_remove_debt_20_other:0 "£consumer_goods_texticon  Consumer Goods Factories factor: §Y-20.0%§!\n"
+ TUR_remove_debt_21_other:0 "£consumer_goods_texticon  Consumer Goods Factories factor: §Y-21.0%§!\n"
+ TUR_remove_debt_22_other:0 "£consumer_goods_texticon  Consumer Goods Factories factor: §Y-22.0%§!\n"
+ TUR_remove_debt_23_other:0 "£consumer_goods_texticon  Consumer Goods Factories factor: §Y-23.0%§!\n"
+ TUR_remove_debt_24_other:0 "£consumer_goods_texticon  Consumer Goods Factories factor: §Y-24.0%§!\n"
+ TUR_remove_debt_25_other:0 "£consumer_goods_texticon  Consumer Goods Factories factor: §Y-25.0%§!\n"
+ TUR_remove_debt_26_other:0 "£consumer_goods_texticon  Consumer Goods Factories factor: §Y-26.0%§!\n"
+ TUR_remove_debt_27_other:0 "£consumer_goods_texticon  Consumer Goods Factories factor: §Y-27.0%§!\n"
+ TUR_remove_debt_30_other:0 "£consumer_goods_texticon  Consumer Goods Factories factor: §Y-30.0%§!\n"
+ TUR_remove_debt_60_other:0 "£consumer_goods_texticon  Consumer Goods Factories factor: §Y-60.0%§!\n"
+ TUR_remove_debt_85_other:0 "£consumer_goods_texticon  Consumer Goods Factories factor: §Y-85.0%§!\n"
  TUR_add_debt_1:0 "Modify §YOttoman Public Debt Administration§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y1.0%§!\n"
  TUR_add_debt_2:0 "Modify §YOttoman Public Debt Administration§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y2.0%§!\n"
  TUR_add_debt_3:0 "Modify §YOttoman Public Debt Administration§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y3.0%§!\n"
